# robot-ipc

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: apis.md  notice.md  python3-apis-cn.md  python3-apis.md  todo.md
examples/: CMakeLists.txt  cpp20_demo.cpp  cross_language_structs.cpp  delete_shm.c  reader.c  writer.c
examples/host_function/: CMakeLists.txt  caller.c  caller.cpp  receiver.c  receiver.cpp
examples/host_function_latency_test/: CMakeLists.txt  caller.c  receiver.c
examples/host_function_python/: caller.py  dispatcher.py
examples/host_variable/: CMakeLists.txt  reader.c  reader.cpp  writer.c  writer.cpp
examples/host_variable_integrity_check/: CMakeLists.txt  reader.c  writer.c
examples/host_variable_latency_test/: CMakeLists.txt  reader.c  writer.c
examples/host_variable_python/: read.py  write.py
examples/host_variable_raw_python/: read.py  write.py
examples/host_variable_struct/: CMakeLists.txt  reader.c  writer.c
examples/super_function/: CMakeLists.txt  caller.c  receiver.c
examples/super_function_latency_test/: CMakeLists.txt  caller.c  receiver.c
examples/super_variable/: CMakeLists.txt  reader.c  writer.c
examples/super_variable_integrity_check/: CMakeLists.txt  reader.c  writer.c
examples/super_variable_latency_test/: CMakeLists.txt  reader.c  shm_reader.c  shm_writer.c  writer.c
include/: config.h  constant.h  error_code.h  host_function_caller.h  host_function_receiver.h  host_variable.h  logger.h  robot_ipc.h  robot_ipc.hpp  robot_ipc_constant.h  robot_ipc_logger.h  super_function_caller.h  super_function_receiver.h  super_variable.h
python3/: robot_ipc.py
python3/host_function/: caller.py  dispatcher.py
python3/host_variable/: read.py  robot_ipc.py  write.py
python3/host_variable_raw/: read.py  write.py
scripts/ci/: run_example_smoke_tests.sh
scripts/ci/tests/: _lib.sh  host_function_basic.sh  host_function_integrity.sh  host_function_latency.sh  host_variable_basic.sh  host_variable_cross_language.sh  host_variable_integrity.sh  host_variable_latency.sh
src/: host_function_caller.c  host_function_receiver.c  host_variable.c  logger.c  python_bindings.cpp  robot_ipc.cpp  robot_ipc_logger.c  super_function_caller.c  super_function_receiver.c  super_variable.c
src/robot_ipc/: __init__.py  robot_ipc.py
super_variable/: super_variable.c  super_variable.h
tests/: shm_reader.c  shm_writer.c
